added modal components for get-directions live-data and ready-to-start

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aws-amplify": "^4.2.7",
     "expo": "~42.0.1",
     "expo-font": "~9.2.1",
+    "expo-linking": "~2.3.1",
     "expo-location": "~12.1.2",
     "expo-permissions": "~12.1.1",
     "expo-status-bar": "~1.0.4",
@@ -31,6 +32,7 @@
     "react-native-chart-kit": "^6.11.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-maps": "0.29.3",
+    "react-native-open-maps": "^0.4.0",
     "react-native-paper": "^4.9.2",
     "react-native-root-siblings": "^4.1.1",
     "react-native-safe-area-context": "3.2.0",
