--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-location": "~12.1.2",
     "expo-permissions": "~12.1.1",
     "expo-status-bar": "~1.0.4",
+    "expo-web-browser": "~9.2.0",
     "lodash": "^4.17.21",
     "lottie-react-native": "4.0.2",
     "react": "16.13.1",
