--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -6,10 +6,9 @@
       "output": {
         "authConfig": {
           "defaultAuthentication": {
-            "authenticationType": "API_KEY",
-            "apiKeyConfig": {
-              "apiKeyExpirationDays": 365,
-              "description": "levs-graphql"
+            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+            "userPoolConfig": {
+              "userPoolId": "authreactpractice33c36127d"
             }
           },
           "additionalAuthenticationProviders": []
