--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ]
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.0",
@@ -19,10 +26,14 @@
     "@reduxjs/toolkit": "^1.6.1",
     "aws-amplify": "^4.2.7",
     "expo": "~42.0.1",
+    "expo-auth-session": "~3.3.1",
+    "expo-av": "~9.2.3",
     "expo-font": "~9.2.1",
     "expo-linking": "~2.3.1",
     "expo-location": "~12.1.2",
+    "expo-network": "~3.2.0",
     "expo-permissions": "~12.1.1",
+    "expo-random": "~11.2.0",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
     "lodash": "^4.17.21",
@@ -45,7 +56,9 @@
     "uuid": "^3.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "jest-expo": "^42.1.0",
+    "react-test-renderer": "^16.11.0"
   },
   "private": true
 }
