--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,10 +5,10 @@ workflows:
     max_build_duration: 60
     environment:
       groups:
-        - group_name
+        - api_keys
       vars:
         PUBLIC_ENV_VAR: "value here"
-        API_KEYS:
+
       flutter: stable
       xcode: latest
     cache:
